build/errors/testdata/missing-return-value.q
main() {}

noValue() -> Int64 {
	return
}
